loggers and notifications added
